force-app/main/default/objects/SMS_LateFees_Status__c/SMS_LateFees_Status__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting to set the status and schedule time for Late fees assessment</description>
    <label>SMS Late Fees Status</label>
</CustomObject>