force-app/main/default/objects/SMS_LateFees_Status__c/fields/IncludedBillingJurisdictions__c.field-meta.xml
<CustomField>
    <fullName>IncludedBillingJurisdictions__c</fullName>
    <description>A list of service jurisdictions separated by commas to be excluded from Late Fees processing</description>
    <label>Included Billing Jurisdictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>