force-app/main/default/objects/SMS_LateFees_Status__c/fields/Reset_Days__c.field-meta.xml
<CustomField>
    <fullName>Reset_Days__c</fullName>
    <label>Reset Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>