force-app/main/default/objects/SMS_LateFees_Status__c/fields/Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time__c</fullName>
    <label>Schedule Time</label>
    <length>7</length>
    <type>Text</type>
</CustomField>