force-app/main/default/objects/SMS_LateFees_Status__c/fields/Zuora_ProductRatePlan_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_ProductRatePlan_Id__c</fullName>
    <label>Zuora Product Rate Plan Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>